--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -38,12 +38,14 @@ paths:
               required: true
               schema:
                   type: string
+              example: 022628c4-d1ea-4ae3-9a6b-04c30ac4f903
             - name: tenantId
               in: path
               description: ID of tenant patient and clinician belongs to
               required: true
               schema:
                   type: string
+              example: apposnd
         get:
             description: Get timeline metadata pertaining to when date ranges start/end
                 for a patient
@@ -90,12 +92,14 @@ paths:
               required: true
               schema:
                   type: string
+              example: 022628c4-d1ea-4ae3-9a6b-04c30ac4f903
             - name: tenantId
               in: path
               description: ID of tenant patient and clinician belongs to
               required: true
               schema:
                   type: string
+              example: apposnd
         get:
             tags:
                 - Timeline Event
@@ -114,7 +118,7 @@ paths:
                   schema:
                       type: string
                       format: date-time
-                      example: '2023-04-20T21:04:36Z'
+                      example: '2023-01-01T00:00:01Z'
                 - name: end
                   in: query
                   description: UTC timestamp representing the (exclusive) ending point of the
@@ -124,7 +128,7 @@ paths:
                   schema:
                       type: string
                       format: date-time
-                      example: '2023-04-20T21:04:36Z'
+                      example: '2024-01-01T00:00:01Z'
             responses:
                 '200':
                     description: Successful operation
