--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -218,6 +218,8 @@ components:
                     type: string
                     format: date-time
                     example: '2023-04-20T21:04:36Z'
+                symptom:
+                    "$ref": "#/components/schemas/Symptom"
         Symptom:
             type: object
             properties:
