--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -196,9 +196,9 @@ components:
                     type: string
                     format: date-time
                     example: '2023-04-20T21:04:36Z'
-        SymptomWithMetadata:
+        Symptom:
             type: object
-            description: A symptom augmented with patient specific metadata
+            description: A symptom
             properties:
                 id:
                     type: string
@@ -213,6 +213,22 @@ components:
                 displayOrder:
                     type: integer
                     example: 3
+                rowCreatedAt:
+                    type: string
+                    format: date-time
+                    example: '2023-04-20T21:04:36Z'
+                rowUpdatedAt:
+                    type: string
+                    format: date-time
+                    example: '2023-04-20T21:04:36Z'
+        PatientSymptom:
+            type: object
+            description: Patient metadata regarding a specific symptom
+            properties:
+                symptomId:
+                    type: string
+                    format: uuid
+                    example: 935a9879-e8ce-4c86-9dcc-1ecdc9722283
                 lastReportedAt:
                     type: string
                     description: When the symptom was last reported for the patient
@@ -223,7 +239,11 @@ components:
                 symptoms:
                     type: array
                     items:
-                        $ref: "#/components/schemas/SymptomWithMetadata"
+                        $ref: "#/components/schemas/Symptom"
+                patientSymptoms:
+                    type: array
+                    items:
+                        $ref: "#/components/schemas/PatientSymptom"
                 dateRanges:
                     type: object
                     properties:
