--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -16,13 +16,21 @@ info:
     contact:
         name: Team APEX (in Slack)
         url: https://projectronin.slack.com/archives/C03QLMWKE12
-    version: 0.0.5
+    version: 0.0.6
 externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
 servers:
     - url: https://timeline.dev.projectronin.io/api/v1
-    - url: http://localhost:3001/api/v1
+    - url: http://localhost:{port}/api/v1
+      variables:
+        port:
+            enum:
+                - '3000'
+                - '3001'
+                - '8080'
+                - '8081'
+            default: '8080'
     - url: https://timeline.stage.projectronin.io/api/v1
 tags:
     - name: Timeline Event
@@ -199,6 +207,8 @@ components:
                     type: string
                     format: date-time
                     example: '2023-04-20T21:04:36Z'
+                symptom:
+                    $ref: "#/components/schemas/Symptom"
         Symptom:
             type: object
             description: A symptom
