--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -21,17 +21,7 @@ externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
 servers:
-    - url: https://timeline.dev.projectronin.io/api/v1
-    - url: http://localhost:{port}/api/v1
-      variables:
-        port:
-            enum:
-                - '3000'
-                - '3001'
-                - '8080'
-                - '8081'
-            default: '8080'
-    - url: https://timeline.stage.projectronin.io/api/v1
+    - url: /api/v1
 tags:
     - name: Timeline Event
       description: Generic timeline events of various types
