--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -16,7 +16,7 @@ info:
     contact:
         name: Team APEX (in Slack)
         url: https://projectronin.slack.com/archives/C03QLMWKE12
-    version: 0.0.7
+    version: 0.0.8
 externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
@@ -46,7 +46,11 @@ paths:
                             $ref: '#/components/schemas/QuestionnaireResponseEventBody'
             responses:
                 '200':
-                    description: 'successful'
+                    description: Successful operation
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/QuestionnaireResponseEventResponse"
                 '401':
                     description: Unauthorized, you didn’t send your token
                 '403':
@@ -161,6 +165,8 @@ paths:
                     description: Unexpected error.
 components:
     schemas:
+        QuestionnaireResponseEventResponse:
+            $ref: '#/components/schemas/SymptomReport'
         QuestionnaireResponseEventBody:
             type: object
             required:
@@ -220,6 +226,7 @@ components:
                     type: array
                     items:
                         "$ref": "#/components/schemas/SymptomReport"
+
         SymptomReport:
             type: object
             required:
